[gd_scene load_steps=19 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://tab.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/audioOff.png" type="Texture" id=4]
[ext_resource path="res://Assets/right.png" type="Texture" id=5]
[ext_resource path="res://Sounds/mainMusic.mp3" type="AudioStream" id=6]
[ext_resource path="res://aquatic_element.tres" type="TileSet" id=7]
[ext_resource path="res://tests/pixel-heart-g5730d0b2c_640.png" type="Texture" id=8]
[ext_resource path="res://tests/dollarLogo.png" type="Texture" id=9]
[ext_resource path="res://tests/upheavtt.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/fastForward.png" type="Texture" id=11]
[ext_resource path="res://Assets/pause.png" type="Texture" id=12]
[ext_resource path="res://Assets/gear.png" type="Texture" id=13]
[ext_resource path="res://Assets/audioOn.png" type="Texture" id=14]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -106, 96, 0, 0, 0, 0, 798, 96, 0, 0, 0, 0, 798, 352, 0, 0, 0, 0, 222, 352, 0, 0, 0, 0, 222, 544, 0, 0, 0, 0, 990, 544, 0, 0, 0, 0, 990, 736 )
}

[sub_resource type="DynamicFontData" id=1]
font_path = "res://tests/upheavtt.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true

[node name="Map" type="Node2D" parent="."]

[node name="PathMap" type="TileMap" parent="Map"]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 65536, 19, 0, 65537, 19, 0, 65538, 19, 0, 65539, 19, 0, 65540, 19, 0, 65541, 19, 0, 65542, 19, 0, 65543, 19, 0, 65544, 19, 0, 65545, 19, 0, 65546, 19, 0, 65547, 19, 0, 65548, 19, 0, 131084, 19, 0, 196620, 19, 0, 262156, 19, 0, 327683, 19, 0, 327684, 19, 0, 327685, 19, 0, 327686, 19, 0, 327687, 19, 0, 327688, 19, 0, 327689, 19, 0, 327690, 19, 0, 327691, 19, 0, 327692, 19, 0, 393219, 19, 0, 458755, 19, 0, 524291, 19, 0, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0, 524297, 19, 0, 524298, 19, 0, 524299, 19, 0, 524300, 34, 0, 524301, 19, 0, 524302, 19, 0, 524303, 19, 0, 589839, 19, 0, 655375, 19, 0, 720896, 5, 0, 720897, 0, 0, 720898, 5, 0, 720899, 0, 0, 720900, 5, 0, 720901, 5, 0, 720902, 0, 0, 720903, 26, 0, 720904, 5, 0, 720905, 26, 0, 720906, 0, 0, 720907, 5, 0, 720908, 0, 0, 720909, 26, 0, 720910, 5, 0, 720911, 19, 0, 720912, 5, 0 )

[node name="Background" type="TileMap" parent="Map"]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( -1, 20, 0, -65536, 20, 0, -65535, 20, 0, -65534, 20, 0, -65533, 20, 0, -65532, 20, 0, -65531, 20, 0, -65530, 20, 0, -65529, 20, 0, -65528, 20, 0, -65527, 20, 0, -65526, 20, 0, -65525, 20, 0, -65524, 20, 0, -65523, 20, 0, -65522, 20, 0, -65521, 20, 0, -65520, 20, 0, -65519, 20, 0, 65535, 20, 0, 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 20, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 20, 0, 13, 20, 0, 14, 20, 0, 15, 20, 0, 16, 20, 0, 17, 20, 0, 131071, 19, 0, 65537, 19, 0, 65538, 19, 0, 65539, 19, 0, 65540, 19, 0, 65541, 19, 0, 65542, 19, 0, 65543, 19, 0, 65544, 19, 0, 65545, 19, 0, 65546, 19, 0, 65547, 19, 0, 65548, 19, 0, 65549, 20, 0, 65550, 20, 0, 65551, 20, 0, 65552, 20, 0, 65553, 20, 0, 196607, 20, 0, 131072, 1610612749, 0, 131073, 20, 0, 131074, 20, 0, 131075, 20, 0, 131076, 20, 0, 131077, 20, 0, 131078, 20, 0, 131079, 20, 0, 131080, 20, 0, 131081, 20, 0, 131082, 20, 0, 131083, 20, 0, 131084, 19, 0, 131085, 13, 0, 131086, 20, 0, 131087, 20, 0, 131088, 20, 0, 131089, 20, 0, 262143, 20, 0, 196608, 20, 0, 196609, 20, 0, 196610, 20, 0, 196611, 20, 0, 196612, 20, 0, 196613, 20, 0, 196614, 20, 0, 196615, 20, 0, 196616, 20, 0, 196617, 20, 0, 196618, 20, 0, 196619, 20, 0, 196620, 19, 0, 196621, 20, 0, 196622, 20, 0, 196623, 20, 0, 196624, 20, 0, 196625, 20, 0, 327679, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 20, 0, 262147, 20, 0, 262148, 20, 0, 262149, 20, 0, 262150, 20, 0, 262151, 20, 0, 262152, 20, 0, 262153, 20, 0, 262154, 20, 0, 262155, 20, 0, 262156, 19, 0, 262157, 20, 0, 262158, 20, 0, 262159, 20, 0, 262160, 20, 0, 262161, 20, 0, 393215, 20, 0, 327680, 20, 0, 327681, 20, 0, 327682, 20, 0, 327683, 19, 0, 327684, 19, 0, 327685, 19, 0, 327686, 19, 0, 327687, 19, 0, 327688, 19, 0, 327689, 19, 0, 327690, 19, 0, 327691, 19, 0, 327692, 19, 0, 327693, 20, 0, 327694, 20, 0, 327695, 20, 0, 327696, 20, 0, 327697, 20, 0, 458751, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 19, 0, 393220, 20, 0, 393221, 20, 0, 393222, 20, 0, 393223, 20, 0, 393224, 20, 0, 393225, 20, 0, 393226, 20, 0, 393227, 20, 0, 393228, 20, 0, 393229, 20, 0, 393230, 20, 0, 393231, 20, 0, 393232, 20, 0, 393233, 20, 0, 524287, 20, 0, 458752, 20, 0, 458753, 20, 0, 458754, 20, 0, 458755, 19, 0, 458756, 20, 0, 458757, 20, 0, 458758, 20, 0, 458759, 20, 0, 458760, 20, 0, 458761, 20, 0, 458762, 20, 0, 458763, 20, 0, 458764, 20, 0, 458765, 20, 0, 458766, 20, 0, 458767, 20, 0, 458768, 20, 0, 458769, 20, 0, 589823, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 19, 0, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0, 524297, 19, 0, 524298, 19, 0, 524299, 19, 0, 524300, 19, 0, 524301, 19, 0, 524302, 19, 0, 524303, 19, 0, 524304, 20, 0, 524305, 20, 0, 655359, 20, 0, 589824, 20, 0, 589825, 17, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 20, 0, 589832, 20, 0, 589833, 20, 0, 589834, 20, 0, 589835, 20, 0, 589836, 20, 0, 589837, 20, 0, 589838, -1073741807, 0, 589839, 19, 0, 589840, 20, 0, 589841, 20, 0, 720895, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 19, 0, 655376, 20, 0, 655377, 20, 0, 786431, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720901, 20, 0, 720902, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 20, 0, 720910, 20, 0, 720911, 20, 0, 720912, 20, 0, 720913, 20, 0 )

[node name="Front" type="TileMap" parent="Map"]
tile_set = ExtResource( 7 )
format = 1
tile_data = PoolIntArray( 0, 16, 0, 1, 26, 0, 2, 26, 0, 3, 16, 0, 4, 26, 0, 5, 16, 0, 6, 16, 0, 7, 26, 0, 8, 16, 0, 9, 16, 0, 10, 26, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 26, 0, 15, 16, 0, 16, 16, 0, 65536, -1610612699, 0, 65542, -1610612699, 0, 65548, 1610612773, 0, 327683, 1610612773, 0, 720896, 5, 0, 720897, 0, 0, 720898, 5, 0, 720899, 0, 0, 720900, 5, 0, 720901, 5, 0, 720902, 0, 0, 720903, 26, 0, 720904, 5, 0, 720905, 26, 0, 720906, 0, 0, 720907, 5, 0, 720908, 0, 0, 720909, 26, 0, 720910, 5, 0, 720911, 37, 0, 720912, 5, 0 )

[node name="Axolotls" type="Node2D" parent="Map"]
pause_mode = 2

[node name="Path" type="Path2D" parent="Map"]
position = Vector2( 2, 0 )
curve = SubResource( 4 )

[node name="Tab" parent="." instance=ExtResource( 3 )]
pause_mode = 2
position = Vector2( 1270, 360 )

[node name="Labels" type="Node2D" parent="."]

[node name="Round" type="Label" parent="Labels"]
margin_left = 8.0
margin_top = 2.0
margin_right = 189.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Round 1"

[node name="Life" type="Label" parent="Labels"]
margin_left = 960.0
margin_top = 2.0
margin_right = 1029.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Money" type="Label" parent="Labels"]
pause_mode = 2
margin_left = 1144.0
margin_top = 4.0
margin_right = 1213.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "5"

[node name="Heart" type="Sprite" parent="Labels"]
position = Vector2( 928, 32 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="DollarLogo" type="Sprite" parent="Labels"]
position = Vector2( 1120, 32 )
texture = ExtResource( 9 )

[node name="Buttons" type="Node2D" parent="."]
pause_mode = 2

[node name="SettingsButton" type="TextureButton" parent="Buttons"]
pause_mode = 2
margin_left = 1336.0
margin_top = -8.0
margin_right = 1448.0
margin_bottom = 100.0
texture_normal = ExtResource( 13 )

[node name="Leucistique" type="ToolButton" parent="Buttons" groups=["build_buttons"]]
pause_mode = 2
margin_left = 1107.0
margin_top = 104.0
margin_right = 1411.0
margin_bottom = 218.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_group_": true
}

[node name="Axanthique" type="ToolButton" parent="Buttons" groups=["build_buttons"]]
pause_mode = 2
margin_left = 1112.0
margin_top = 256.0
margin_right = 1416.0
margin_bottom = 370.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_group_": true
}

[node name="Copper" type="ToolButton" parent="Buttons" groups=["build_buttons"]]
pause_mode = 2
margin_left = 1113.0
margin_top = 410.0
margin_right = 1417.0
margin_bottom = 524.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_group_": true
}

[node name="Melanique" type="ToolButton" parent="Buttons" groups=["build_buttons"]]
pause_mode = 2
margin_left = 1113.0
margin_top = 566.0
margin_right = 1417.0
margin_bottom = 680.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_group_": true
}

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="GameControls" type="VBoxContainer" parent="UI"]
margin_left = 988.0
margin_top = 69.0
margin_right = 1088.0
margin_bottom = 273.0

[node name="PausePlayButton" type="TextureButton" parent="UI/GameControls"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 70 )
size_flags_vertical = 5
toggle_mode = true
pressed = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )

[node name="SpeedUp" type="TextureButton" parent="UI/GameControls"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
rect_min_size = Vector2( 70, 70 )
size_flags_vertical = 5
texture_normal = ExtResource( 11 )

[node name="InGameSettings" type="Node2D" parent="."]
pause_mode = 2
visible = false

[node name="Quit" type="Button" parent="InGameSettings"]
pause_mode = 2
margin_left = 306.0
margin_top = 117.0
margin_right = 506.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Sound" type="TextureButton" parent="InGameSettings"]
pause_mode = 2
margin_left = 520.0
margin_top = 100.0
margin_right = 620.0
margin_bottom = 200.0
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 4 )

[connection signal="tree_exiting" from="." to="." method="_on_Game_tree_exiting"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="UI/GameControls/PausePlayButton" to="UI" method="_on_PausePlayButton_pressed"]
[connection signal="pressed" from="UI/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="InGameSettings/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="InGameSettings/Sound" to="." method="_on_Sound_pressed"]
